package sample.Metods;
//Интрерфейс, включающий метод сортировки
public interface Strategy {
    public void sort(int[] array);


}