@startuml

title __JAVAFXAPPLICATION's Class Diagram__\n

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.BubbleSort {
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.Context {
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.InsertionSort {
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.SelectionSort {
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      interface sample.Metods.Strategy {
      }
    }
  }
  

  sample.Controller o-- sample.Metods.Context : context
  sample.Main -up-|> javafx.application.Application
  sample.Metods.BubbleSort .up.|> sample.Metods.Strategy
  sample.Metods.Context o-- sample.Metods.Strategy : strategy
  sample.Metods.InsertionSort .up.|> sample.Metods.Strategy
  sample.Metods.SelectionSort .up.|> sample.Metods.Strategy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
